margin and padding spacing fix

--- a/gui/css/custom.css
+++ b/gui/css/custom.css
@@ -4,6 +4,10 @@
 	box-shadow: 0px 0px 15px 0px rgba(163,163,163,1);
 }
 
+.navbar {
+  margin-bottom: 5px;
+}
+
 .label-grey {
 	border: 1px solid #ccc;
 	color: #777;
